fixed css transition on safari

--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,4 @@
+
 .myRow td,
 .myRow td button {
     -webkit-transition: all 0.5s ease;  
@@ -14,6 +15,4 @@
     margin: 0px;
     border: 0px;
     padding: 0px;
-    visibility: hidden;
 }
-
